--- a/proportal/src/css/sass/modules/_variables.scss
+++ b/proportal/src/css/sass/modules/_variables.scss
@@ -39,8 +39,8 @@ $nar-: 479px;
 $nar: 480px;		// narrow = 30rem
 $med-: 767px;
 $med: 768px;		// medium = 48rem
-$half-: 1023px;		
-$half: 1024px; 
+$half-: 1023px;
+$half: 1024px;
 
 /*
 60rem: narrower
@@ -69,7 +69,7 @@ $underline: 1px solid map-get( $jgi-palette, dk_grey );		// switch over to using
 $element-height: 3rem;
 $element-padding-sides: 1.5rem;
 
-$element-font-size: 0.9em;
+$element-font-size: 0.9rem;
 
 // Button variables
 $button-height: 3rem; //$element-height;
