--- a/proportal/src/css/sass/partials/_extras.scss
+++ b/proportal/src/css/sass/partials/_extras.scss
@@ -7,16 +7,16 @@
 .noteToSelf {
 	background-color: #FFFF99;
 	font-style: italic;
-	padding: 0.3em 1em 0.3em 1em;
+	padding: .25rem 1rem .25rem 1rem;
 	display: inline;
 }
 .help {
 	background-color: #8899dd;
 	color: white;
 	font-weight: bold;
-	border-radius: 12px;
-	padding: 0.1em 0.3em 0.1em 0.3em;
-	/* margin: 0.2em; */
+	border-radius: .25rem;
+	padding: .1rem .3rem .1rem .3rem;
+	/* margin: 0.2rem; */
 	display: inline;
 	float: right;
 }
