--- a/proportal/src/css/sass/partials/_nav_jgi-links.scss
+++ b/proportal/src/css/sass/partials/_nav_jgi-links.scss
@@ -45,14 +45,14 @@
 
 .header-search {
 // 	margin-top: 5px;
-	
+
 	&__input {
 		width: 10rem;
 		height: 2.3rem;
-		font-size: 1em; //$element-font-size;
+		font-size: 1rem; //$element-font-size;
 		&:active, &:focus {
 			width: 20rem;
-		}	
+		}
 	}
 	&__label {	}
 	&__submit {
