--- a/proportal/views/pages/details/scaffold.tt
+++ b/proportal/views/pages/details/scaffold.tt
@@ -8,35 +8,59 @@
 	PROCESS 'inc/title/scaffold.tt';
 
 %]
-<dl class="[% class %]__dl">
-<dt class="[% class %]__def">IMG scaffold ID</dt>
-<dd class="[% class %]__term">[% self.scaffold_oid %]</dd>
-<dt class="[% class %]__term">Sequence length</dt>
-<dd class="[% class %]__def">[% self.scaffold_stats.seq_length %]</dd>
-<dt class="[% class %]__term">Topology</dt>
-<dd class="[% class %]__def">[% self.mol_topology %]</dd>
-<dt class="[% class %]__term">GC content</dt>
-<dd class="[% class %]__def">[% self.scaffold_stats.gc_percent %]</dd>
-<dt class="[% class %]__term">Genes</dt>
-<dd class="[% class %]__def">[%
-	IF self.defined('scaffold_stats')
-		&& self.scaffold_stats.defined('count_total_gene'); %]
-<a href="[% link( 'list', { domain => 'gene', scaffold_oid => self.scaffold_oid } ) %]">[% self.scaffold_stats.count_total_gene %]</a>
-[%	END; %]
-</dd>
-<dt class="[% class %]__term">RNA</dt>
-<dd class="[% class %]__def">[%
-	IF self.defined('scaffold_stats')
-		&& self.scaffold_stats.defined('count_rna'); %]
-<a href="[% link( 'list', { domain => 'gene', scaffold_oid => self.scaffold_oid, category => 'rna' } ) %]">[% self.scaffold_stats.count_rna %]</a>
-[%	END; %]
-</dd>
-<dt class="[% class %]__def">External references</dt>
-<dd class="[% class %]__term">[%
-	IF self.db_source && self.ext_accession; %]
-<a href="[%  %]">[% self.db_source %]:[% self.ext_accession %]</a>
-[%	END; %]
-</dl>
+
+<table class="[% class %]__table">
+<caption class="[% class %]__caption">Scaffold information</caption>
+<thead class="[% class %]__thead">
+<tr>
+	<th class="[% class %]__th--attr">Attribute</th>
+	<th class="[% class %]__th--value">Value</th>
+</tr>
+</thead>
+<tbody class="[% class %]__tbody">
+<tr>
+	<td class="[% class %]__tcell--attr">IMG scaffold ID</td>
+	<td class="[% class %]__tcell--val">[% self.scaffold_oid %]</td>
+</tr>
+<tr>
+	<td class="[% class %]__tcell--attr">Sequence length</td>
+	<td class="[% class %]__tcell--val">[% self.scaffold_stats.seq_length %]</td>
+</tr>
+	<td class="[% class %]__tcell--attr">Topology</td>
+	<td class="[% class %]__tcell--val">[% self.mol_topology %]</td>
+</tr>
+<tr>
+	<td class="[% class %]__tcell--attr">GC content</td>
+	<td class="[% class %]__tcell--val">[% self.scaffold_stats.gc_percent %]</td>
+</tr>
+<tr>
+	<td class="[% class %]__tcell--attr">Genes</td>
+	<td class="[% class %]__tcell--val">[%
+		IF self.defined('scaffold_stats')
+			&& self.scaffold_stats.defined('count_total_gene'); %]
+	<a href="[% link( 'list', { domain => 'gene', scaffold_oid => self.scaffold_oid } ) %]">[% self.scaffold_stats.count_total_gene %]</a>
+	[%	END; %]
+	</td>
+</tr>
+<tr>
+	<td class="[% class %]__tcell--attr">RNA</td>
+	<td class="[% class %]__tcell--val">[%
+		IF self.defined('scaffold_stats')
+			&& self.scaffold_stats.defined('count_rna'); %]
+	<a href="[% link( 'list', { domain => 'gene', scaffold_oid => self.scaffold_oid, category => 'rna' } ) %]">[% self.scaffold_stats.count_rna %]</a>
+	[%	END; %]
+	</td>
+</tr>
+<tr>
+	<td class="[% class %]__tcell--attr">External references</td>
+	<td class="[% class %]__tcell--val">[%
+		IF self.db_source && self.ext_accession; %]
+	<a href="[%  %]">[% self.db_source %]:[% self.ext_accession %]</a>
+	[%	END; %]
+</tr>
+</tbody>
+</table>
+
 <p class="[% class %]__updated">Added [% self.add_date %]; last modified [% self.last_update %]</p>
 
 [%	END %]
